--- a/package.json
+++ b/package.json
@@ -10,6 +10,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.5.6"
+    "@astrojs/react": "^2.2.1",
+    "@fontsource/fragment-mono": "^5.0.2",
+    "@nanostores/react": "^0.7.1",
+    "@types/react-dom": "^18.2.4",
+    "astro": "^2.5.6",
+    "framer-motion": "^10.12.16",
+    "nanostores": "^0.9.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.9",
+    "sass": "^1.63.2"
   }
 }
