--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^2.2.1",
+    "@fontsource-variable/inter": "^5.0.3",
     "@fontsource/fragment-mono": "^5.0.2",
     "@nanostores/react": "^0.7.1",
     "@types/react-dom": "^18.2.4",
