--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^0.19.7",
     "@astrojs/react": "^2.2.1",
     "@fontsource-variable/inter": "^5.0.3",
     "@fontsource/fragment-mono": "^5.0.2",
