--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/inter": "^5.0.3",
     "@fontsource/fragment-mono": "^5.0.2",
     "@nanostores/react": "^0.7.1",
+    "@octokit/core": "^4.2.4",
     "@types/react-dom": "^18.2.4",
     "astro": "^2.5.6",
     "framer-motion": "^10.12.16",
