--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/pages/writing"]
-	path = src/pages/writing
-	url = https://github.com/yihui-hu/yihui-work-journal.git
+[submodule "src/pages/notes"]
+	path = src/pages/notes
+	url = https://github.com/yihui-hu/notes.git
