--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^2.2.1",
+    "@astrojs/react": "^3.0.0",
     "@fontsource-variable/inter": "^5.0.3",
     "@fontsource/fragment-mono": "^5.0.2",
     "@nanostores/react": "^0.7.1",
     "@octokit/core": "^4.2.4",
     "@types/react-dom": "^18.2.4",
-    "astro": "^2.5.6",
+    "astro": "^3.0.6",
     "framer-motion": "^10.12.16",
     "nanostores": "^0.9.1",
     "react": "^18.2.0",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.9",
-    "sass": "^1.63.2"
+    "sass": "^1.63.2",
+    "typescript": "^5.2.2"
   }
 }
